<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Enter Custom Donation Amount"
        android:textSize="17sp"
        android:textColor="@color/White"
        android:background="@color/AquaGreen"
        android:padding="12dp"/>
    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/White">
    <EditText
        android:id="@+id/custom_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:windowSoftInputMode="stateAlwaysHidden"
        android:text="Rent"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:gravity="center_vertical|left"
        android:background="@drawable/white_button"
        android:layout_margin="5dp"
        android:padding="10dp"/>

        <ImageButton
            android:id="@+id/clear_text"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/Transparent"
            android:src="@drawable/ic_action_cancel"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/TOTAL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/ZeroDollars"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:gravity="center_vertical|right"
        android:background="@drawable/white_button"
        android:layout_margin="5dp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="-"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/_DELETE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_DELETE"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:textSize="18sp"
            android:textColor="@color/Black"
            android:background="@drawable/white_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Enter"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:background="@drawable/aqua_green_button"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

    </LinearLayout>

</LinearLayout>
<FrameLayout
android:id="@+id/full_layout"
android:layout_width="match_parent"
android:layout_height="match_parent">
</FrameLayout>
</RelativeLayout>