<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#BDBDBD"
    android:gravity="center_horizontal"
    tools:context=".MerchantTestActivity">
    <RelativeLayout
        android:id="@+id/actionbar"
        android:background="@color/AquaGreen"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:paddingRight="10dp"
            android:paddingLeft="20dp"
            android:layout_centerVertical="true"
            android:textColor="@color/White"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:text="Settings"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:background="@drawable/gray_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/topll"
        android:layout_below="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"

        >
        <LinearLayout
            android:id="@+id/v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/clockin_button"
                android:layout_width="330dp"
                android:layout_height="150dp"
                android:text="@string/navbutton1"
                android:textSize="26sp"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:background="@drawable/aqua_green_button"
                android:layout_margin="20dp"
                android:padding="5dp"
                />
            <Button
                android:id="@+id/bar_button"
                android:layout_width="330dp"
                android:layout_height="150dp"
                android:textSize="26sp"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:text="@string/navbutton2"
                android:background="@drawable/aqua_green_button"
                android:layout_margin="20dp"
                android:padding="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/ipes_button"
                android:layout_width="330dp"
                android:layout_height="150dp"
                android:textSize="26sp"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:text="@string/navbutton3"
                android:background="@drawable/aqua_green_button"
                android:layout_margin="20dp"
                android:padding="5dp"
                />
            <Button
                android:id="@+id/door_button"
                android:layout_width="330dp"
                android:layout_height="150dp"
                android:textSize="26sp"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:text="@string/navbutton4"
                android:background="@drawable/aqua_green_button"
                android:layout_margin="20dp"
                android:padding="5dp"
                />
        </LinearLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/full_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
</RelativeLayout>
